--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="shortcut icon" href="New Project.jpg" type="image/x-icon" />
-    <title>CodeHelp Blogs</title>
+    <title>LifeStyle Blogs</title>
   </head>
   <body>
     <div class="container">
       <header class="heading_wrapper">
-        <h1 class="heading_title">CodeHelp Blogs {🔥}</h1>
+        <h1 class="heading_title">LifeStyle Blogs</h1>
         <p class="paragraph_header">
-          Utilize this space to incoorporate a captivating subheading created by
-          CharGPT, adding deapth and intregue to your blogs.
+          Explore the essence of living with our diverse range of lifestyle
+          articles. From travel adventures to culinary delights, fashion trends
+          to wellness tips, our blog is your gateway to a vibrant and enriching
+          lifestyle. Immerse yourself in captivating narratives, insightful
+          experiences, and expert advice curated to inspire and enhance your
+          everyday life.
         </p>
       </header>
       <main class="main_wapper">
