--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 />
               </div>
               <div class="card_info">
-                <span class="JoneDoe">John Doe</span><span>1 july 1976</span>
+                <span class="JoneDoe">John Doe</span><span>12 july 2016</span>
               </div>
             </div>
             <div class="card_tags">Technology</div>
@@ -79,7 +79,7 @@
                 />
               </div>
               <div class="card_info">
-                <span class="JoneDoe">Geeta Rai</span><span>1 july 1976</span>
+                <span class="JoneDoe">Alen Parker</span><span>21 jan 2023</span>
               </div>
             </div>
             <div class="card_tags">Healthy</div>
@@ -113,7 +113,7 @@
                 />
               </div>
               <div class="card_info">
-                <span class="JoneDoe">John Doe</span><span>1 july 2000</span>
+                <span class="JoneDoe">John Doe</span><span>1 july 2020</span>
               </div>
             </div>
             <div class="card_tags">travel</div>
